--- a/src/app/components/template/nav/nav.component.html
+++ b/src/app/components/template/nav/nav.component.html
@@ -9,13 +9,13 @@
             </a>
             <a mat-list-item routerLink="/cities">
                 <i class="material-icons">
-                    storefront
+                    location_city
                 </i>
                 Cidades
             </a>
             <a mat-list-item routerLink="/states">
                 <i class="material-icons">
-                    storefront
+                    location_on
                 </i>
                 Estados
             </a>
