--- a/src/app/components/template/header/header.component.css
+++ b/src/app/components/template/header/header.component.css
@@ -7,6 +7,7 @@
     display: flex;
     align-items: center;
     text-decoration: none;
+    color: #333;
 }
 
 .header .logo {
@@ -19,4 +20,11 @@
 
 .header .title-group i {
     padding-right: 5px;
+}
+
+.header .title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
