--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -1,15 +1,19 @@
 <mat-toolbar class="header mat-elevation-z4">
-    <span>
-        <a routerLink="/">
-            <img class="logo" src="../../../../assets/img/mapabrasil.jpg" alt="logo">
-        </a>
-    </span>
-    <span class="title-group">
-        <a>
-            <i class="material-icons blue">
-                home
-            </i>
-            Início
-        </a>
-    </span>
+    <div>
+        <span>
+            <a routerLink="/">
+                <img class="logo" src="../../../../assets/img/mapabrasil.jpg" alt="logo">
+            </a>
+        </span>
+    </div>
+    <div class="title">
+        <span class="title-group">
+            <a routerLink="{{routeUrl}}">
+                <i class="material-icons blue">
+                    {{icon}}
+                </i>
+                {{title}}
+            </a>
+        </span>
+    </div>
 </mat-toolbar>
