--- a/src/app/components/city/city-update/city-update.component.html
+++ b/src/app/components/city/city-update/city-update.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <mat-card-title>Nova cidade</mat-card-title>
+    <mat-card-title>Alterar cidade</mat-card-title>
     <form>
         <mat-form-field>
             <input matInput placeholder="Nome" [(ngModel)]="city.name" name="name">
