--- a/src/app/components/city/city-read/city-read.component.html
+++ b/src/app/components/city/city-read/city-read.component.html
@@ -12,10 +12,22 @@
         <td mat-cell *matCellDef="let row">{{row.name}}</td>
       </ng-container>
 
-      <!-- Abbreviation Column -->
+      <!-- state Column -->
       <ng-container matColumnDef="state">
         <th mat-header-cell *matHeaderCellDef >Estado</th>
         <td mat-cell *matCellDef="let row">{{row.state_name}}</td>
+      </ng-container>
+
+      <!-- date_creation Column -->
+      <ng-container matColumnDef="date_creation">
+        <th mat-header-cell *matHeaderCellDef >Data de criação</th>
+        <td mat-cell *matCellDef="let row">{{row.date_creation}}</td>
+      </ng-container>
+
+      <!-- date_last_update Column -->
+      <ng-container matColumnDef="date_last_update">
+        <th mat-header-cell *matHeaderCellDef >Data de última atualização</th>
+        <td mat-cell *matCellDef="let row">{{row.date_last_update}}</td>
       </ng-container>
 
       <!-- Action Column -->
