--- a/src/app/components/state/state-read/state-read.component.html
+++ b/src/app/components/state/state-read/state-read.component.html
@@ -18,6 +18,18 @@
         <td mat-cell *matCellDef="let row">{{row.abbreviation}}</td>
       </ng-container>
 
+      <!-- Abbreviation Column -->
+      <ng-container matColumnDef="date_creation">
+        <th mat-header-cell *matHeaderCellDef >Data de criação</th>
+        <td mat-cell *matCellDef="let row">{{row.date_creation}}</td>
+      </ng-container>
+
+      <!-- Abbreviation Column -->
+      <ng-container matColumnDef="date_last_update">
+        <th mat-header-cell *matHeaderCellDef >Data da última atualização</th>
+        <td mat-cell *matCellDef="let row">{{row.date_last_update}}</td>
+      </ng-container>
+
       <!-- Action Column -->
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef >Ação</th>
